--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minimalist Portfolio</title>
+    <title>Ugur Ersoz-Portolio</title>
     <style>
         * {
             margin: 0;
@@ -149,49 +149,49 @@
 </head>
 <body>
     <header>
-        <h1>İsim Soyisim</h1>
-        <p>Yazılım Geliştirici</p>
+        <h1>Uğur Ersöz</h1>
+        <p>Product Developer</p>
     </header>
 
     <main>
         <section id="about">
-            <h2>Hakkımda</h2>
-            <p>Buraya kısa ve öz bir şekilde kendinizi tanıtan bir metin yazabilirsiniz.</p>
+            <h2>About Me </h2>
+            <p></p>
         </section>
 
         <section id="projects">
-            <h2>Projeler</h2>
+            <h2>Projectsr</h2>
             <div class="projects">
                 <div class="project-card" data-project="1">
-                    <h3>Proje 1</h3>
-                    <p>Kısa açıklama. Detaylar için tıklayın.</p>
+                    <h3>Project 1</h3>
+                    <p></p>
                 </div>
                 <div class="project-card" data-project="2">
-                    <h3>Proje 2</h3>
-                    <p>Kısa açıklama. Detaylar için tıklayın.</p>
+                    <h3>Project 2</h3>
+                    <p></p>
                 </div>
                 <div class="project-card" data-project="3">
-                    <h3>Proje 3</h3>
-                    <p>Kısa açıklama. Detaylar için tıklayın.</p>
+                    <h3>Project 3</h3>
+                    <p></p>
                 </div>
             </div>
         </section>
 
         <section id="skills">
-            <h2>Yetenekler</h2>
+            <h2>Skills</h2>
             <div class="skills">
-                <span class="skill-tag">HTML5</span>
-                <span class="skill-tag">CSS3</span>
-                <span class="skill-tag">JavaScript</span>
-                <span class="skill-tag">React</span>
-                <span class="skill-tag">Node.js</span>
+                <span class="skill-tag"></span>
+                <span class="skill-tag"></span>
+                <span class="skill-tag">t</span>
+                <span class="skill-tag"></span>
+                <span class="skill-tag"></span>
             </div>
         </section>
 
         <section class="contact">
-            <a href="mailto:ornek@email.com">Email</a>
-            <a href="https://github.com/kullaniciadi">GitHub</a>
-            <a href="https://linkedin.com/in/kullaniciadi">LinkedIn</a>
+            <a href="mailto:uersoz55@email.com">Email</a>
+            <a href="https://github.com/ugrersoz">GitHub</a>
+            <a href="https://www.linkedin.com/in/ersozugur/">LinkedIn</a>
         </section>
     </main>
 
