--- a/index.html
+++ b/index.html
@@ -150,17 +150,18 @@
 <body>
     <header>
         <h1>Uğur Ersöz</h1>
-        <p>Product Developer</p>
+        <p>Product Developer & Researcher</p>
     </header>
 
     <main>
         <section id="about">
             <h2>About Me </h2>
-            <p></p>
+            <p>🏀 Enthusiastic team player dedicated to thriving in challenging projects.🧬
+I am a young scientist and entrepreneurial engineer in the fields of biotechnology and health technologies. With a curious and investigative identity, I enjoy being involved in product management, product development, and R&D processes. I always strive to be part of a team in tasks that involve innovation and competition.</p>
         </section>
 
         <section id="projects">
-            <h2>Projectsr</h2>
+            <h2>Projects</h2>
             <div class="projects">
                 <div class="project-card" data-project="1">
                     <h3>Project 1</h3>
