--- a/index.html
+++ b/index.html
@@ -213,19 +213,21 @@
         <h1>Uğur Ersöz</h1>
         <p>Product Developer & Researcher</p>
         <div class="header-contact">
-            <a href="mailto:uersoz55@gmail.com">📧 uersoz55@gmail.com</a>
+            <a href="mailto:uersoz55@gmail.com">📧 Mail</a>
             <a href="https://linkedin.com/in/ersozugur">👔 LinkedIn</a>
+            <a href="https://github.com/ugrersoz">💻 GitHub</a>
+            <a href="https://uersoz55.medium.com/">📰Medium</a>
         </div>
     </header>
 
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Product Developer with experience in scientific research and development, specialized in combining molecular biology knowledge with technical skills to create innovative solutions. Currently pursuing a Master's in Life Science Management & Engineering at HTW Berlin.</p>
+            <p>Product Developer with experience in scientific research and development, specialized in combining bioinformatics knowledge with technical skills to create innovative solutions. Currently pursuing a Master's in Life Science Management & Engineering at HTW Berlin.</p>
         </section>
 
         <section id="cv">
-            <h2>Experience & Education</h2>
+            <h2>CV-Resume</h2>
             <div class="cv-container">
                 <div class="cv-tabs">
                     <button class="cv-tab active" data-tab="experience">Experience</button>
@@ -329,9 +331,11 @@
         <section id="skills">
             <h2>Skills</h2>
             <div class="skills">
-                <span class="skill-tag">Python</span>
+                <span class="skill-tag">MS Office</span>
+                <span class="skill-tag">Google Workspace</span>
                 <span class="skill-tag">Git</span>
                 <span class="skill-tag">GitHub</span>
+                <span class="skill-tag">Python</span>
                 <span class="skill-tag">Jupyter Notebook</span>
                 <span class="skill-tag">VS Code</span>
                 <span class="skill-tag">UCSC Genome Browser</span>
@@ -357,6 +361,7 @@
             <a href="mailto:uersoz55@gmail.com">Email</a>
             <a href="https://github.com/ugrersoz">GitHub</a>
             <a href="https://linkedin.com/in/ersozugur">LinkedIn</a>
+            <a href ="https://uersoz55.medium.com/">Medium</a> 
         </section>
     </main>
 
