--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Product Developer with experience in scientific research and development, specialized in combining bioinformatics knowledge with technical skills to create innovative solutions. Currently pursuing a Master's in Life Science Management & Engineering at HTW Berlin.</p>
+            <p>Imagine a world where science meets innovation, where the code of life unlocks new possibilities for human performance. I’m Uğur Ersöz, a passionate Product Developer and Researcher with a knack for blending bioinformatics with cutting-edge technology. With a solid foundation in Molecular Biology and Genetics from Bahçeşehir University—where I graduated with top honors—I’m now diving deeper into Life Science Management & Engineering at HTW Berlin. My journey is fueled by curiosity, driven by data, and shaped by a vision to create solutions that transform sports, nutrition, and health. From coding insightful visualizations in Python to leading interactive research projects, I thrive at the intersection of science and technology, always eager to tackle the next big challenge.</p>
         </section>
 
         <section id="cv">
@@ -457,7 +457,7 @@
                             </div>
                             <div class="project-content">
                                 <div class="project-details">
-                                    <p><strong>Advanced Biomarkers:</strong> Explored integrating genetic data with wearable tech for personalized sports and nutrition management. Presented at The Podium Institute Conference, Oxford, September 26-27, 2024.</p>
+                                    <p><strong>Advanced Biomarkers:</strong> Investigated the integration of genetic testing with wearable technology (e.g., heart rate monitors, activity trackers) to develop personalized sports and nutrition management solutions. Presented at The Podium Institute Inaugural Annual Conference on Sports Medicine and Technology, Oxford, September 26-27, 2024, in collaboration with Yasemin Uk, Irmak Ege, Gözde Şimşek, and Oğuzhan Doğan.</p>
                                 </div>
                                 <img class="project-image" src="https://via.placeholder.com/100" alt="Research Poster" data-full-src="https://via.placeholder.com/800">
                             </div>
@@ -473,9 +473,9 @@
                             <div class="project-content">
                                 <div class="project-details">
                                     <p><strong>Genetic Insights:</strong> Investigated CYP1A2 genotypes' impact on caffeine metabolism and sports performance for Turkish young adults. Achieved an A grade.</p>
-                                    <a href="#">Project Page</a>
+                                    <a href="https://github.com/ugrersoz/Capstone_Project">Project Page</a>
                                 </div>
-                                <img class="project-image" src="https://via.placeholder.com/100" alt="Caffeine Study Graph" data-full-src="https://via.placeholder.com/800">
+                                <img class="project-image" src="https://via.placeholder.com/100" alt="Capstone Cover" data-full-src="https://via.placeholder.com/800">
                             </div>
                         </div>
                         <div class="project-item">
@@ -554,6 +554,7 @@
                 <span class="skill-tag">Turkish (Native)</span>
                 <span class="skill-tag">English (B2)</span>
                 <span class="skill-tag">Spanish (A1-A2)</span>
+                <span class="skill-tag">German (In Progress – HTW Berlin)</span>
             </div>
         </section>
 
