--- a/index.html
+++ b/index.html
@@ -418,22 +418,22 @@
                             <div class="project-header">
                                 <div class="project-icon">🧬</div>
                                 <div>
-                                    <div class="project-title">Genetic Testing + Wearables</div>
+                                    <div class="project-title">Uniqgene Research Poster at Oxford</div>
                                     <div class="project-date">April – September 2024</div>
                                 </div>
                             </div>
                             <div class="project-content">
                                 <div class="project-details">
-                                    <p><strong>Advanced Biomarkers:</strong> Investigated the integration of genetic testing with wearable technology (e.g., heart rate monitors, activity trackers) to develop personalized sports and nutrition management solutions. Presented at The Podium Institute Inaugural Annual Conference on Sports Medicine and Technology, Oxford, September 26-27, 2024, in collaboration with Yasemin Uk, Irmak Ege, Gözde Şimşek, and Oğuzhan Doğan.</p>
+                                    <p><strong>Advanced Biomarkers:</strong> As the Uniqgene product and development team, we presented our research poster at The Podium Institute Inaugural Annual Conference on Sports Medicine and Technology, held on September 26-27 in Oxford. Our study, titled "Integration of Genetic Testing with Wearable Technology: Advanced Biomarkers for Personalized Sports and Nutrition Management", examined how combining genetic data with real-time wearable tracking could transform personalized health monitoring for athletes.</p>
                                 </div>
-                                <img class="project-image" src="https://raw.githubusercontent.com/ugrersoz/my-portfolio/main/images/capstone-project2.jpeg" alt="Research Poster" data-full-src="https://raw.githubusercontent.com/ugrersoz/my-portfolio/main/images/capstone-project2.jpeg">
+                                <img class="project-image" src="https://raw.githubusercontent.com/ugrersoz/my-portfolio/main/images/oxford-uniqgene-poster.png" alt="Research Poster" data-full-src="https://raw.githubusercontent.com/ugrersoz/my-portfolio/main/images/oxford-uniqgene-poster.png">
                             </div>
                         </div>
                         <div class="project-item">
                             <div class="project-header">
                                 <div class="project-icon">☕</div>
                                 <div>
-                                    <div class="project-title">Caffeine Metabolism Study</div>
+                                    <div class="project-title">MBG4999 | Capstone Project: Caffeine Metabolism Study</div>
                                     <div class="project-date">February – June 2023</div>
                                 </div>
                             </div>
@@ -442,7 +442,7 @@
                                     <p><strong>Genetic Insights:</strong> Investigated CYP1A2 genotypes' impact on caffeine metabolism and sports performance for Turkish young adults. Achieved an A grade.</p>
                                     <a href="https://github.com/ugrersoz/Capstone_Project">Project Page</a>
                                 </div>
-                                <img class="project-image" src="https://raw.githubusercontent.com/ugrersoz/my-portfolio/main/images/capstone-project1.jpeg" alt="Capstone Cover" data-full-src="https://raw.githubusercontent.com/ugrersoz/my-portfolio/main/images/capstone-project1.jpeg">
+                                <img class="project-image" src="https://raw.githubusercontent.com/ugrersoz/my-portfolio/main/images/capstone-project1.jpeg" alt="Capstone Cover" data-full-src="https://raw.githubusercontent.com/ugrersoz/my-portfolio/main/images/capstone-project2.jpeg">
                             </div>
                         </div>
                         <div class="project-item">
@@ -457,7 +457,7 @@
                                 <div class="project-details">
                                     <p><strong>Sustainable Innovation:</strong> Designed a mobile app aligned with SDG "Healthy and Quality Life" during the MZV YetGen program.</p>
                                 </div>
-                                <img class="project-image" src="https://raw.githubusercontent.com/ugrersoz/my-portfolio/main/images/oxford-uniqgene-poster.png" alt="App Mockup" data-full-src="https://raw.githubusercontent.com/ugrersoz/my-portfolio/main/images/oxford-uniqgene-poster.png">
+                                <img class="project-image" src="https://raw.githubusercontent.com/ugrersoz/my-portfolio/main/images/live-useful-project.jpeg" alt="App Mockup" data-full-src="https://raw.githubusercontent.com/ugrersoz/my-portfolio/main/images/live-useful-project.jpeg">
                             </div>
                         </div>
                     </div>
