--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                     <button class="cv-tab active" data-tab="experience">Experience</button>
                     <button class="cv-tab" data-tab="education">Education</button>
                     <button class="cv-tab" data-tab="projects">Projects</button>
-                    <button class="cv-tab" data-tab="certificates">Activities & Certifications</button>
+                    <button class="cv-tab" data-tab="activities-certifications">Activities & Certifications</button>
                 </div>
                 
                 <div class="cv-content">
@@ -462,27 +462,17 @@
                         </div>
                     </div>
                     
-                    <div class="cv-tab-content" id="certificates">
+                    <div class="cv-tab-content" id="activities-certifications">
                         <div class="certificate-card">
-                            <h3>Miuul</h3>
-                            <p>• Workflow and Process Management with Git, GitHub, GitLab, and Jira (10 hours)</p>
-                            <p>• Product Ownership (12 hours)</p>
+                            <h3>Activities</h3>
+                            <p><strong>Trainee at Yetkin Gençler (Online)</strong><br>February – May 2021<br>YetGen is a 12-week 21st Century Competencies Training Program where training included Effective Presentation Techniques, Teamwork, Career Planning, Excel, Information/Media/Finance Literacy, Social Innovation, and the GirişGen process. During the Yetkin Gençler Education and Awareness Program, I completed assignments aimed at helping me establish my enterprise with a focus on the UN Sustainable Development Goals as part of the GirişGen process.</p>
+                            <p><strong>Volunteering – Engineering Team Member at Bahçeşehir University</strong><br>October 2020 – 2022<br>Assisted in organizing the "Marketing Talks" event. Contributed to the organizing team for the "Start-Up Summit" event. Served as a member of the organizing team for the "VI. Career Days" event. Contributed to Dakika Magazine's writing team.</p>
                         </div>
                         <div class="certificate-card">
-                            <h3>Insider</h3>
-                            <p>Scrum Development Program (3 weeks)</p>
-                        </div>
-                        <div class="certificate-card">
-                            <h3>Global AI Hub</h3>
-                            <p>Python Programming</p>
-                        </div>
-                        <div class="certificate-card">
-                            <h3>MZV YetGen Program</h3>
-                            <p>21st Century Competencies Training (12 weeks, February - May 2021)</p>
-                        </div>
-                        <div class="certificate-card">
-                            <h3>Bahçeşehir University</h3>
-                            <p>Career and Development Club, Engineering Team Member (October 2020 - 2022)</p>
+                            <h3>Certifications</h3>
+                            <p><strong>Miuul</strong><br>• Workflow and Process Management with Git, GitHub, GitLab, and Jira (10 hours)<br>• Product Ownership (12 hours)</p>
+                            <p><strong>Insider</strong><br>Scrum Development Program (3 weeks)</p>
+                            <p><strong>Global AI Hub</strong><br>Python Programming</p>
                         </div>
                     </div>
                 </div>
@@ -572,6 +562,9 @@
         modal.addEventListener('click', () => {
             modal.classList.remove('active');
         });
+    </script>
+</body>
+</html>
     </script>
 </body>
 </html>
