--- a/index.html
+++ b/index.html
@@ -491,9 +491,6 @@
                 <span class="skill-tag">UCSC Genome Browser</span>
                 <span class="skill-tag">Ensembl</span>
                 <span class="skill-tag">Galaxy</span>
-                <span class="skill-tag">NanoDrop</span>
-                <span class="skill-tag">DNA Isolation</span>
-                <span class="skill-tag">qPCR</span>
                 <span class="skill-tag">MS Office</span>
                 <span class="skill-tag">Google Workspace</span>
                 <span class="skill-tag">Figma</span>
@@ -510,8 +507,8 @@
             <div class="skills">
                 <span class="skill-tag">Turkish (Native)</span>
                 <span class="skill-tag">English (B2)</span>
+                <span class="skill-tag">German (A2)</span>
                 <span class="skill-tag">Spanish (A1-A2)</span>
-                <span class="skill-tag">German (In Progress – HTW Berlin)</span>
             </div>
         </section>
     </main>
