--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <a href="v0/index.html">Go to v0 Version</a>
     <title>Ugur Ersoz</title>
     <style>
         * {
