--- a/index.html
+++ b/index.html
@@ -550,69 +550,51 @@
             </div>
         </section>
 
-        <section class="section">
+       <section class="section">
     <h2 class="section-title">
         <span class="section-icon">🚀</span>
         Key Projects
     </h2>
-    
+
     <div class="project-item">
-        <div class="project-header" style="align-items: center; gap: 20px;">
-            <img src="images/oxford-uniqgene-poster.png" alt="Oxford Uniqgene Poster" style="width: 80px; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
-            <div>
-                <div class="project-title">
-                    <span class="icon">⌚</span>
-                    Integration of Genetic Testing with Wearable Technology
-                </div>
+        <div class="project-header">
+            <img class="project-image" src="images/oxford-uniqgene-poster.png" alt="Oxford Uniqgene Poster" data-full-src="images/oxford-uniqgene-poster.png">
+            <div class="project-info">
+                <div class="project-title"><span class="icon">⌚</span> Integration of Genetic Testing with Wearable Technology</div>
                 <div class="project-duration">Apr - Sep 2024</div>
             </div>
         </div>
-        <div class="project-company">
-            <span>📊</span>
-            Uniqgene Research Paper & Poster
-        </div>
+        <div class="project-company"><span>📊</span>Uniqgene Research Paper & Poster</div>
         <div class="project-description">
-            Advanced biomarkers for personalized sports and nutrition management. Presented at The Podium Institute Inaugural Annual Conference on Sports Medicine and Technology in Oxford. Examined how combining genetic data with real-time wearable tracking could transform personalized health monitoring for athletes.
+            Advanced biomarkers for personalized sports and nutrition management...
         </div>
     </div>
 
     <div class="project-item">
-        <div class="project-header" style="align-items: center; gap: 20px;">
-            <img src="images/capstone-project1.jpeg" alt="CYP1A2 Genotypes Study" style="width: 80px; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
-            <div>
-                <div class="project-title">
-                    <span class="icon">☕</span>
-                    CYP1A2 Genotypes & Caffeine Metabolism Study
-                </div>
+        <div class="project-header">
+            <img class="project-image" src="images/capstone-project1.jpeg" alt="CYP1A2 Genotypes Study" data-full-src="images/capstone-project1.jpeg">
+            <div class="project-info">
+                <div class="project-title"><span class="icon">☕</span> CYP1A2 Genotypes & Caffeine Metabolism Study</div>
                 <div class="project-duration">Feb - Jun 2023</div>
             </div>
         </div>
-        <div class="project-company">
-            <span>🎓</span>
-            Bahçeşehir University Capstone Project
-        </div>
+        <div class="project-company"><span>🎓</span>Bahçeşehir University Capstone Project</div>
         <div class="project-description">
-            Genetic approach to optimal caffeine consumption practices for Turkish young adult population. Completed with highest grade A and presented to departmental jury. Focused on the relationship between genotypes, caffeine metabolism, and sports performance.
+            Genetic approach to optimal caffeine consumption practices...
         </div>
     </div>
 
     <div class="project-item">
-        <div class="project-header" style="align-items: center; gap: 20px;">
-            <img src="images/live-useful-project.jpeg" alt="LiveUseful App" style="width: 80px; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
-            <div>
-                <div class="project-title">
-                    <span class="icon">📊</span>
-                    LiveUseful App
-                </div>
+        <div class="project-header">
+            <img class="project-image" src="images/live-useful-project.jpeg" alt="LiveUseful App" data-full-src="images/live-useful-project.jpeg">
+            <div class="project-info">
+                <div class="project-title"><span class="icon">📊</span> LiveUseful App</div>
                 <div class="project-duration">May 2021</div>
             </div>
         </div>
-        <div class="project-company">
-            <span>📈</span>
-            MZV YetGen 
-        </div>
+        <div class="project-company"><span>📈</span>MZV YetGen</div>
         <div class="project-description">
-            Sustainable Innovation: Designed a mobile app aligned with SDG "Healthy and Quality Life" during the MZV YetGen program.
+            Sustainable Innovation: Designed a mobile app aligned with SDG "Healthy and Quality Life"...
         </div>
     </div>
 </section>
