--- a/index.html
+++ b/index.html
@@ -104,9 +104,181 @@
                 </div>
             </div>
         </header>
+     <body>
+    <div class="container">
+        <header class="header">
+            <h1 class="name">Ugur Ersoz<br>
+                <span style="font-size: 0.4em; color: #666;">
+                    (Türkçe: Uğur Ersöz / Deutsch: Ugur Ersöz)
+                </span>
+            </h1>
+            <p class="title">Product Developer & Life Science Researcher</p>
+            <div class="contact">
+                <div class="contact-item">
+                    <span><img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Email" style="width: 16px; height: 16px; vertical-align: middle;"></span>
+                    <a href="mailto:uersoz55@gmail.com">Mail</a>
+                </div>
+                <div class="contact-item">
+                    <span><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" alt="LinkedIn" style="width: 16px; height: 16px; vertical-align: middle;"></span>
+                    <a href="https://www.linkedin.com/in/ersozugur" target="_blank">LinkedIn</a>
+                </div>
+                <div class="contact-item">
+                    <span><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" style="width: 16px; height: 16px; vertical-align: middle;"></span>
+                    <a href="https://github.com/ugrersoz" target="_blank">GitHub</a>
+                </div>
+            </div>
+        </header>
 
-        <!-- ... Diğer bölümler ... -->
+        <section class="section">
+            <h2 class="section-title">
+            <span class="section-icon">👋</span>
+            About Me
+            </h2>
+            <div class="experience-item">
+            <div class="job-description" style="text-align: justify;">
+                Imagine a world where science meets innovation, where the code of life unlocks new possibilities for human performance. 
+                I'm Uğur Ersöz, a passionate Product Developer and Researcher with a knack for blending bioinformatics with cutting-edge technology.
+                With a foundation in Molecular Biology and Genetics from Bahçeşehir University, I'm now diving deeper into Life Science Management & Engineering at HTW Berlin.
+                My journey is fueled by curiosity, driven by data, and shaped by a vision to create solutions that transform sports, nutrition, and health.
+                From coding insightful visualizations in Python to leading interactive research projects, I thrive at the intersection of science and technology,
+                always eager to tackle the next big challenge.
+            </div>
+            </div>
+        </section>
 
+
+        <section class="section">
+            <h2 class="section-title">
+                <span class="section-icon">💼</span>
+                Experience
+            </h2>
+            
+            <div class="experience-item">
+                <div class="job-header">
+                    <div class="job-title">
+                        <span class="icon">🔬</span>
+                        Product Developer & Researcher
+                    </div>
+                    <div class="job-duration">Feb 2023 - Oct 2024</div>
+                </div>
+                <div class="company">
+                    <span>🏢</span>
+                    Uniqgene
+                </div>
+                <div class="job-description">
+                    <ul>
+                        <li>Led a 6-month scientific product development project, presenting research to end users in an interactive format</li>
+                        <li>Designed and optimized products tailored to end-user profiles based on scientific research</li>
+                        <li>Developed new product target system enhancing sports performance-related products effectiveness</li>
+                        <li>Created insightful data visualizations using Python for comprehensive analysis and decision-making</li>
+                        <li>Led content development for Interactive Report product throughout 10-month project</li>
+                        <li>Analyzed 40+ competitors and gathered insights from 200+ users for system design</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="experience-item">
+                <div class="job-header">
+                    <div class="job-title">
+                        <span class="icon">🧪</span>
+                        Research and Development Intern
+                    </div>
+                    <div class="job-duration">Jul - Aug 2023</div>
+                </div>
+                <div class="company">
+                    <span>🏢</span>
+                    Uniqgene
+                </div>
+                <div class="job-description">
+                    <ul>
+                        <li>Developed personalized reports for elite and semi-professional athletes in biotechnology industry</li>
+                        <li>Conducted literature searches and identified candidate genes for testing</li>
+                        <li>Designed primers and probes for DNA analysis</li>
+                        <li>Mastered key laboratory techniques: NanoDrop for DNA quantification, DNA isolation, and qPCR for gene expression analysis</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="experience-item">
+                <div class="job-header">
+                    <div class="job-title">
+                        <span class="icon">📈</span>
+                        Intern & Growth Hacker
+                    </div>
+                    <div class="job-duration">Feb 2022 - Jan 2023</div>
+                </div>
+                <div class="company">
+                    <span>🏢</span>
+                    Uniqgene
+                </div>
+                <div class="job-description">
+                    <ul>
+                        <li>Conducted literature research in sports genetics field providing insights for product development decisions</li>
+                        <li>Aligned strategic plans with product vision and goals through active engagement in execution</li>
+                        <li>Optimized campaign performance using data import/export techniques for decision-making processes</li>
+                        <li>Assisted in NBA Launchpad and Barça Allianz Startup Challenge program applications</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="experience-item">
+                <div class="job-header">
+                    <div class="job-title">
+                        <span class="icon">👥</span>
+                        Engineering Team Member
+                    </div>
+                    <div class="job-duration">Oct 2020 - 2022</div>
+                </div>
+                <div class="company">
+                    <span>🎓</span>
+                    Bahçeşehir University - Career and Development Club
+                </div>
+                <div class="job-description">
+                    <ul>
+                        <li>Organized and contributed to successful events including "Marketing Talks" and "Start-Up Summit"</li>
+                        <li>Played significant role in organizing team for "VI. Career Days" ensuring effective execution</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="section">
+            <h2 class="section-title">
+                <span class="section-icon">🎓</span>
+                Education
+            </h2>
+            
+            <div class="education-item">
+                <div class="education-header">
+                    <div class="degree">
+                        <span class="icon">🎯</span>
+                        Master of Life Science Management & Engineering
+                    </div>
+                    <div class="education-duration">Oct 2024 - Present</div>
+                </div>
+                <div class="school">
+                    <span>🏛️</span>
+                    Hochschule für Technik und Wirtschaft Berlin (HTW Berlin)
+                </div>
+            </div>
+
+            <div class="education-item">
+                <div class="education-header">
+                    <div class="degree">
+                        <span class="icon">🧬</span>
+                        Bachelor of Science - Molecular Biology and Genetics
+                    </div>
+                    <div class="education-duration">Sep 2018 - 2023</div>
+                </div>
+                <div class="school">
+                    <span>🏛️</span>
+                    Bahçeşehir University
+                </div>
+                <div class="education-details">
+                    Faculty of Engineering and Natural Sciences • ApplyBAU Scholarship • Capstone Project Grade: A
+                </div>
+            </div>
+        </section>
         <section class="section">
             <h2 class="section-title">
                 <span class="section-icon">🚀</span>
@@ -152,8 +324,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- ... Diğer bölümler (Deneyim, Eğitim, Yetenekler vs.) ... -->
 
     </div>
     <!-- Modal -->
