--- a/index.html
+++ b/index.html
@@ -105,30 +105,6 @@
             </div>
         </header>
      <body>
-    <div class="container">
-        <header class="header">
-            <h1 class="name">Ugur Ersoz<br>
-                <span style="font-size: 0.4em; color: #666;">
-                    (Türkçe: Uğur Ersöz / Deutsch: Ugur Ersöz)
-                </span>
-            </h1>
-            <p class="title">Product Developer & Life Science Researcher</p>
-            <div class="contact">
-                <div class="contact-item">
-                    <span><img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Email" style="width: 16px; height: 16px; vertical-align: middle;"></span>
-                    <a href="mailto:uersoz55@gmail.com">Mail</a>
-                </div>
-                <div class="contact-item">
-                    <span><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" alt="LinkedIn" style="width: 16px; height: 16px; vertical-align: middle;"></span>
-                    <a href="https://www.linkedin.com/in/ersozugur" target="_blank">LinkedIn</a>
-                </div>
-                <div class="contact-item">
-                    <span><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" style="width: 16px; height: 16px; vertical-align: middle;"></span>
-                    <a href="https://github.com/ugrersoz" target="_blank">GitHub</a>
-                </div>
-            </div>
-        </header>
-
         <section class="section">
             <h2 class="section-title">
             <span class="section-icon">👋</span>
@@ -344,5 +320,60 @@
         this.querySelector('img').src = '';
     });
     </script>
+</body>
+<section class="section">
+            <h2 class="section-title">
+                <span class="section-icon">⚡</span>
+                Skills
+            </h2>
+            <div class="skills-grid">
+                <div class="skill-category">
+                    <h3>
+                        <span class="icon">💻</span>
+                        Programming & Development
+                    </h3>
+                    <div class="skill-list">
+                        Python (Jupyter Notebook, VS Code, Sublime Text)<br>
+                        Git, GitHub<br>
+                        Data Visualization
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>
+                        <span class="icon">🔬</span>
+                        Bioinformatics & Research
+                    </h3>
+                    <div class="skill-list">
+                        UCSC Genome Browser<br>
+                        Ensembl, Galaxy<br>
+                        NanoDrop, DNA isolation, qPCR
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>
+                        <span class="icon">📋</span>
+                        Project Management
+                    </h3>
+                    <div class="skill-list">
+                        Jira, Confluence<br>
+                        Scrum Development<br>
+                        Product Ownership
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>
+                        <span class="icon">🌍</span>
+                        Languages
+                    </h3>
+                    <div class="skill-list">
+                        Turkish (Native)<br>
+                        English (B2)<br>
+                        German (A2)<br>
+                        Spanish (A1-A2)
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
